mostly finished unless bugs arise

--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Heat Map</title>
+	<title>National Contiguity</title>
  	<meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
  	<link rel="stylesheet" href="styles/normalize.css"/>
+ 	<link rel="stylesheet" href="styles/flags/flags.min.css"/>
   	<link rel="stylesheet" href="styles/main.css"/>
 </head>
 <body>
+<h1> Countries Connected by Borders</h1>
+	<p> A Force Directed Graph </p>
 <div class='mainCont'>
 	<div class="graphContainer">
 	</div>
