--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 	<div class="graphContainer">
 	</div>
 </div>
+
+<p> Built with help from 
+<a href="https://bl.ocks.org/mbostock/4062045" target="_blank"> Mike Bostocks </a> 
+FDG example as well <a href="https://d3js.org/" target="_blank"> D3js.org </a></p>
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script type="text/javascript" src="scripts/index.js"></script>
 </body>
